--- a/index.html
+++ b/index.html
@@ -9,37 +9,42 @@
 </head>
 <body>
 	<div class="container">
-	  <h2>Travel Tiemz</h2>
-	  <ul class="nav nav-tabs">
-	    <li class="active"><a data-toggle="tab" href="#mon">Monday</a></li>
-	    <li><a data-toggle="tab" href="#tues">Tuesday</a></li>
-	    <li><a data-toggle="tab" href="#wed">Wednesday</a></li>
+		<h2>Travel Tiemz</h2>
+		<ul class="nav nav-tabs">
+			<li class="active"><a data-toggle="tab" href="#mon">Monday</a></li>
+			<li><a data-toggle="tab" href="#tues">Tuesday</a></li>
+			<li><a data-toggle="tab" href="#wed">Wednesday</a></li>
 			<li><a data-toggle="tab" href="#thurs">Thursday</a></li>
 			<li><a data-toggle="tab" href="#fri">Friday</a></li>
-	  </ul>
+		</ul>
 
-	  <div class="tab-content">
-	    <div id="mon" class="tab-pane fade in active">
-	      <h3>Monday</h3>
-				<div id="mon_chart"></div>
-	    </div>
-	    <div id="tues" class="tab-pane fade">
+		<div class="tab-content">
+			<div id="mon" class="tab-pane fade in active">
+				<h3>Monday</h3>
+					<div id="e_mon_chart"></div>
+					<div id="l_mon_chart"></div>
+			</div>
+			<div id="tues" class="tab-pane fade">
 				<h3>Tuesday</h3>
-				<div id="tues_chart"></div>
-	    </div>
-	    <div id="wed" class="tab-pane fade">
-	      <h3>Wednesday</h3>
-				<div id="wed_chart"></div>
-	    </div>
-	    <div id="thurs" class="tab-pane fade">
-	      <h3>Thursday</h3>
-				<div id="thurs_chart"></div>
-	    </div>
+					<div id="e_tues_chart"></div>
+					<div id="l_tues_chart"></div>
+			</div>
+			<div id="wed" class="tab-pane fade">
+				<h3>Wednesday</h3>
+					<div id="e_wed_chart"></div>
+					<div id="l_wed_chart"></div>
+			</div>
+			<div id="thurs" class="tab-pane fade">
+				<h3>Thursday</h3>
+					<div id="e_thurs_chart"></div>
+					<div id="l_thurs_chart"></div>
+			</div>
 			<div id="fri" class="tab-pane fade">
 				<h3>Friday</h3>
-				<div id="fri_chart"></div>
+					<div id="e_fri_chart"></div>
+					<div id="l_fri_chart"></div>
 			</div>
-	  </div>
+		</div>
 	</div>
 
 </body>
