--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 			<li><a data-toggle="tab" href="#wed">Wednesday</a></li>
 			<li><a data-toggle="tab" href="#thurs">Thursday</a></li>
 			<li><a data-toggle="tab" href="#fri">Friday</a></li>
+			<li><a data-toggle="tab" href="#sat">Saturday</a></li>
+			<li><a data-toggle="tab" href="#sun">Sunday</a></li>
 		</ul>
 
 		<div class="tab-content">
@@ -43,6 +45,16 @@
 				<h3>Friday</h3>
 					<div id="e_fri_chart"></div>
 					<div id="l_fri_chart"></div>
+			</div>
+			<div id="sat" class="tab-pane fade">
+				<h3>Saturday</h3>
+					<div id="e_sat_chart"></div>
+					<div id="l_sat_chart"></div>
+			</div>
+			<div id="sun" class="tab-pane fade">
+				<h3>Sunday</h3>
+					<div id="e_sun_chart"></div>
+					<div id="l_sun_chart"></div>
 			</div>
 		</div>
 	</div>
